--- a/index.html
+++ b/index.html
@@ -291,8 +291,9 @@
        <a href="https://twitter.com/Rahmanabdul2468" target="blank">
         <i class="footer-icon fab fa-twitter"></i>
        </a>
-      
-      <i class="footer-icon fas fa-envelope"></i>
+       <a href="mailto:abdul786rahman49@gmail.com" target="_blank">
+        <i class="footer-icon fas fa-envelope"></i>
+       </a>
       <p class="copyright">© Copyright 2021 TinDog</p>
     </footer>
   </body>
